Fix lombok for openjdk 16